Implement calculate total claim amount for admin + filtering. Implement filtering for customer